# elvquant_front

./: .env.example  .gitignore  AGENTS.md  PROJECT.md  README.md  REVIEW.md  RUNBOOK.md  TASKS.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.circleci/: config.yml
docs/: ITERATION_LOG.md  PROJECT_MEMORY.md
docs/superpowers/plans/: 2026-06-11-institutional-uiux-upgrade.md  2026-06-11-react-institutional-dashboard.md
elvquant_front/: __init__.py  api.py  core_bridge.py
src/: proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/app/api/runs/: route.ts
src/app/runs/[runId]/: error.tsx  loading.tsx  page.tsx
src/components/: artifact-viewer.tsx  equity-chart.test.tsx  equity-chart.tsx  execution-lane.tsx  language-switcher.tsx  metric-grid.test.ts  metric-grid.tsx  quant-visuals.tsx  risk-posture.tsx  run-table.tsx  stooq-status.tsx  system-telemetry.tsx  workflow-board.tsx
src/lib/: analytics.test.ts  analytics.ts  auth.ts  chart.test.ts  chart.ts  contracts.ts  core-api.test.ts  core-api.ts  env.test.ts  env.ts  i18n.test.ts  i18n.ts
tests/: test_api_contract.py  test_core_bridge.py  test_documentation_contract.py  test_front_boundary.py
web/: tsconfig.app.json
web/src/: App.tsx  api.ts  styles.css  types.ts
