[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elvquant-front"
version = "0.1.0"
description = "Thin Streamlit client for elvquant_core local debugging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
