[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elvquant-front"
version = "0.1.0"
description = "Institutional React cockpit with a thin FastAPI bridge for elvquant_core local debugging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
elvquant-front = "elvquant_front.api:main"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "elvquant_front"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
